# tvscraper

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.mk  example.env  pyproject.toml  tox.ini
.github/workflows/: docker-publish.yml
alpaca2pg/: __main__.py  pgutils.py  utils.py
alpaca2pg/sql/: table_exists.sql  test.sql
tests/: conftest.py  test_main.py
tvscraper/: __main__.py  base_crawler.py  exc_utils.py  exceptions.py  gui.py  pos_manager.py  tv_crawler.py  utils.py
